# performance_test

./: .gitignore  Cargo.toml  README.md
.cargo/: config
bench_results/Size in Bytes (power of 2)/0/base/: benchmark.json  estimates.json  raw.csv  sample.json
bench_results/Size in Bytes (power of 2)/0/change/: estimates.json
bench_results/Size in Bytes (power of 2)/0/new/: tukey.json
bench_results/Size in Bytes (power of 2)/0/report/: index.html
bench_results/Size in Bytes (power of 2)/1/base/: raw.csv
bench_results/Size in Bytes (power of 2)/1/change/: estimates.json
bench_results/Size in Bytes (power of 2)/1/new/: benchmark.json  estimates.json  sample.json  tukey.json
bench_results/Size in Bytes (power of 2)/1/report/: index.html
bench_results/Size in Bytes (power of 2)/10/base/: benchmark.json  raw.csv  sample.json
bench_results/Size in Bytes (power of 2)/10/change/: estimates.json
bench_results/Size in Bytes (power of 2)/10/new/: estimates.json  tukey.json
bench_results/Size in Bytes (power of 2)/10/report/: index.html
bench_results/Size in Bytes (power of 2)/11/base/: benchmark.json  raw.csv  sample.json  tukey.json
bench_results/Size in Bytes (power of 2)/11/change/: estimates.json
bench_results/Size in Bytes (power of 2)/11/new/: estimates.json
bench_results/Size in Bytes (power of 2)/11/report/: index.html
bench_results/Size in Bytes (power of 2)/12/base/: estimates.json  sample.json  (+1 more)
bench_results/Size in Bytes (power of 2)/report/: index.html
bench_results/report/: index.html
benches/: benchmark.rs
src/: lib.rs
(+130 files in other folders)
