[package]
edition = "2018"
name = "performance_test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "benchmark"

[profile.release]
debug = true
[profile.bench]
debug = true
